postgresql-common (79) UNRELEASED; urgency=low

  * debian/supported-versions: Welcome, version 8.3!
  * pg_createcluster: Add configure_8.3(), with the same default options as
    for 8.2 for now.
  * PgCommon.pm, cluster_info(): 8.3 defaults to 'autovacuum = On' when not
    given, reflect that in the avac_enable return value.

 -- Martin Pitt <mpitt@debian.org>  Tue, 09 Oct 2007 13:26:46 +0200

postgresql-common (78) unstable; urgency=low

  * debian/postgresql-common.postinst: Only clean up
    /usr/lib/postgresql/dumpall/ on upgrades if it is actually a directory.
    (Closes: #440596)

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Sep 2007 20:59:30 +0200

postgresql-common (77) unstable; urgency=low

  * debian/control: Fix obsolete ${Source-Version}.
  * t/020_create_sql_remove.t: Create fake rotated log files to check that
    they are cleaned up properly.
  * pg_dropcluster: Remove rotated logs, too. (part of #431643)
  * debian/postgresql-common.postinst: Clean up /usr/lib/postgresql/dumpall/
    junk from the Sarge->Etch postgresql transition. This needs to be kept
    until after Lenny's release. (part of #431643)
  * Add debian/postgresql-client-common.postrm: Clean up
    /var/lib/postgresql/.psql_history on purge. Closes: #431643
  * debian/postgresql-common.postinst: Create /var/lib/postgresql/ if it does
    not exist. This should not usually happen, but apparently did anyway.
    (Closes: #438698)

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Aug 2007 15:45:28 +0200

postgresql-common (76) unstable; urgency=medium

  * Priority medium since this unbreaks client programs like psql in testing.
  * pg_wrapper: Revert changes of version 74 to make this work with taint
    mode. It breaks too many custom setups, and Perl just doesn't allow to
    untaint $PATH bluntly. If you run pg_wrapper from a perl script with taint
    checks enabled, you have to clean $PATH yourself. Closes: #427894